b=568101 use the value of aRaise in SetFocus to determine whether to set gFocusWindow r=enndeakin

--HG--
extra : rebase_source : bb755e470a77360d0d0aef703fa3377df0bec5fe